--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 			src="https://kit.fontawesome.com/7a835bf005.js"
 			crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<div class="container">
